Improve prediction threshold and output display
Fixed prediction threshold for cat and dog images from 0.5 to 0.8

--- a/Image_Recognition_AI/Image_Recognition_AI.ipynb
+++ b/Image_Recognition_AI/Image_Recognition_AI.ipynb
@@ -1337,7 +1337,8 @@
         "img_array = preprocess_input(img_array)\n",
         "\n",
         "prediction = loaded_model.predict(img_array)\n",
-        "print(\"Prediction class:\",\"Dog\" if prediction[0][0] > 0.5 else \"Cat\")"
+        "print("Raw prediction output:", prediction[0][0])\n",
+        "print(\"Prediction class:\",\"Dog\" if prediction[0][0] > 0.8 else \"Cat\")"
       ]
     },
     {
