Change image display width in Object Detection app

--- a/Object_Detection_app/Object_Detection.ipynb
+++ b/Object_Detection_app/Object_Detection.ipynb
@@ -6397,11 +6397,11 @@
         "    uploaded = st.file_uploader(\"Upload image\", type=[\"jpg\", \"jpeg\", \"png\"])\n",
         "    if uploaded:\n",
         "        img = Image.open(uploaded).convert(\"RGB\")\n",
-        "        st.image(img, caption=\"Input image\", use_container_width=True)\n",
+        "        st.image(img, caption=\"Input image\", use_column_width=True)\n",
         "        results = model.predict(np.array(img), conf=conf, imgsz=img_size)\n",
         "        annotated, df = annotate_and_table(results, model)\n",
         "        if annotated is not None:\n",
-        "            st.image(annotated, caption=\"Annotated\", use_container_width=True)\n",
+        "            st.image(annotated, caption=\"Annotated\", use_column_width=True)\n",
         "        if not df.empty:\n",
         "            st.dataframe(df, use_container_width=True)\n",
         "        else:\n",
