--- a/Object_Detection_app/Object_Detection.ipynb
+++ b/Object_Detection_app/Object_Detection.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNVpr9VUJW3keRoD9FPUUwr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -6026,7 +6025,7 @@
         },
         "outputId": "b349b462-f162-4cae-cdc6-e4d77d1ede8f"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6413,18 +6412,144 @@
         "        tmp = save_uploaded_file(uploaded_vid)\n",
         "        st.video(tmp)\n",
         "\n",
-        "        with st.spinner(\"Processing video...\"):\n",
-        "            project_dir = tempfile.mkdtemp()\n",
-        "            results = model.predict(source=tmp, conf=conf, imgsz=img_size, project=project_dir, name=\"run\", save=True)\n",
+        "        if st.button(\"Process Video\"):\n",
+        "            with st.spinner(\"Processing video...\"):\n",
+        "                cap = cv2.VideoCapture(tmp)\n",
+        "                fps = int(cap.get(cv2.CAP_PROP_FPS))\n",
+        "                width = int(cap.get(cv2.CAP_PROP_FRAME_WIDTH))\n",
+        "                height = int(cap.get(cv2.CAP_PROP_FRAME_HEIGHT))\n",
+        "                total_frames = int(cap.get(cv2.CAP_PROP_FRAME_COUNT))\n",
         "\n",
-        "        try:\n",
-        "            out_dir = str(results[0].save_dir)\n",
-        "            vids = glob.glob(os.path.join(out_dir, \"*\"))\n",
-        "            if vids:\n",
-        "                st.success(\"Video processing complete!\")\n",
-        "                st.video(vids[0])\n",
-        "        except:\n",
-        "            st.warning(\"Could not display annotated video\")"
+        "                # Ensure dimensions are even (required for H.264)\n",
+        "                if width % 2 != 0:\n",
+        "                    width -= 1\n",
+        "                if height % 2 != 0:\n",
+        "                    height -= 1\n",
+        "\n",
+        "                # Create temporary output (using avi for reliability during processing)\n",
+        "                temp_output = tempfile.NamedTemporaryFile(delete=False, suffix='.avi').name\n",
+        "                fourcc = cv2.VideoWriter_fourcc(*'XVID')\n",
+        "                out = cv2.VideoWriter(temp_output, fourcc, fps, (width, height))\n",
+        "\n",
+        "                # Progress bar\n",
+        "                progress_bar = st.progress(0)\n",
+        "                status_text = st.empty()\n",
+        "                frame_count = 0\n",
+        "\n",
+        "                # Process each frame\n",
+        "                while cap.isOpened():\n",
+        "                    ret, frame = cap.read()\n",
+        "                    if not ret:\n",
+        "                        break\n",
+        "\n",
+        "                    # Resize if needed\n",
+        "                    if frame.shape[1] != width or frame.shape[0] != height:\n",
+        "                        frame = cv2.resize(frame, (width, height))\n",
+        "\n",
+        "                    # Run detection on frame\n",
+        "                    results = model.predict(frame, conf=conf, imgsz=img_size, verbose=False)\n",
+        "\n",
+        "                    # Get annotated frame\n",
+        "                    annotated_frame = results[0].plot()\n",
+        "\n",
+        "                    # Ensure correct size\n",
+        "                    if annotated_frame.shape[1] != width or annotated_frame.shape[0] != height:\n",
+        "                        annotated_frame = cv2.resize(annotated_frame, (width, height))\n",
+        "\n",
+        "                    # Write to output\n",
+        "                    out.write(annotated_frame)\n",
+        "\n",
+        "                    # Update progress\n",
+        "                    frame_count += 1\n",
+        "                    progress = min(frame_count / total_frames, 1.0)\n",
+        "                    progress_bar.progress(progress)\n",
+        "                    status_text.text(f\"Processing frame {frame_count}/{total_frames}\")\n",
+        "\n",
+        "                cap.release()\n",
+        "                out.release()\n",
+        "                progress_bar.empty()\n",
+        "\n",
+        "                # Convert to web-compatible MP4 using ffmpeg\n",
+        "                status_text.text(\"Converting to web-compatible format...\")\n",
+        "                final_output = tempfile.NamedTemporaryFile(delete=False, suffix='.mp4').name\n",
+        "\n",
+        "                try:\n",
+        "                    import subprocess\n",
+        "                    # Use ffmpeg to convert to H.264 MP4 (web-compatible)\n",
+        "                    result = subprocess.run([\n",
+        "                        'ffmpeg', '-y',  # Overwrite output\n",
+        "                        '-i', temp_output,  # Input file\n",
+        "                        '-c:v', 'libx264',  # H.264 video codec\n",
+        "                        '-preset', 'medium',  # Encoding speed\n",
+        "                        '-crf', '23',  # Quality (lower = better, 18-28 is reasonable)\n",
+        "                        '-pix_fmt', 'yuv420p',  # Pixel format (required for browser compatibility)\n",
+        "                        '-movflags', '+faststart',  # Enable streaming\n",
+        "                        final_output\n",
+        "                    ], check=True, capture_output=True, text=True)\n",
+        "\n",
+        "                    status_text.empty()\n",
+        "                    st.success(\"Video processing complete!\")\n",
+        "\n",
+        "                    # Read and display the video\n",
+        "                    if os.path.exists(final_output) and os.path.getsize(final_output) > 0:\n",
+        "                        with open(final_output, 'rb') as f:\n",
+        "                            video_bytes = f.read()\n",
+        "\n",
+        "                        # Display video\n",
+        "                        st.video(video_bytes)\n",
+        "\n",
+        "                        # Offer download\n",
+        "                        st.download_button(\n",
+        "                            label=\"Download processed video\",\n",
+        "                            data=video_bytes,\n",
+        "                            file_name=\"detected_video.mp4\",\n",
+        "                            mime=\"video/mp4\"\n",
+        "                        )\n",
+        "                    else:\n",
+        "                        st.error(\"Failed to create output video\")\n",
+        "\n",
+        "                    # Cleanup temp files\n",
+        "                    try:\n",
+        "                        os.unlink(temp_output)\n",
+        "                        os.unlink(final_output)\n",
+        "                    except:\n",
+        "                        pass\n",
+        "\n",
+        "                except FileNotFoundError:\n",
+        "                    status_text.empty()\n",
+        "                    st.error(\"FFmpeg is not installed!\")\n",
+        "                    st.info(\"\"\"\n",
+        "                    **To fix this:**\n",
+        "                    1. For Streamlit Cloud: Create a `packages.txt` file with one line: `ffmpeg`\n",
+        "                    2. For local: Install ffmpeg:\n",
+        "                       - Windows: `choco install ffmpeg` or download from ffmpeg.org\n",
+        "                       - Mac: `brew install ffmpeg`\n",
+        "                       - Linux: `sudo apt-get install ffmpeg`\n",
+        "                    \"\"\")\n",
+        "\n",
+        "                    # Provide download of the AVI file as fallback\n",
+        "                    with open(temp_output, 'rb') as f:\n",
+        "                        video_bytes = f.read()\n",
+        "                    st.download_button(\n",
+        "                        label=\"Download processed video (AVI format)\",\n",
+        "                        data=video_bytes,\n",
+        "                        file_name=\"detected_video.avi\",\n",
+        "                        mime=\"video/x-msvideo\"\n",
+        "                    )\n",
+        "\n",
+        "                except subprocess.CalledProcessError as e:\n",
+        "                    status_text.empty()\n",
+        "                    st.error(f\"FFmpeg conversion failed: {e.stderr}\")\n",
+        "\n",
+        "                    # Provide download as fallback\n",
+        "                    with open(temp_output, 'rb') as f:\n",
+        "                        video_bytes = f.read()\n",
+        "                    st.download_button(\n",
+        "                        label=\"Download processed video (may not play in browser)\",\n",
+        "                        data=video_bytes,\n",
+        "                        file_name=\"detected_video.avi\",\n",
+        "                        mime=\"video/x-msvideo\"\n",
+        "                    )"
       ],
       "metadata": {
         "colab": {
@@ -6433,7 +6558,7 @@
         "id": "KX27h40do-xf",
         "outputId": "04efe6bd-4588-4445-8509-f25462547532"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6469,7 +6594,7 @@
         "id": "Up1QVS5z_F22",
         "outputId": "08097301-d852-42d0-f0cd-a5c963ffeffe"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
